# cpp_snippets

./: CMakeLists.txt
src/: generic_function_wrapper.cpp  generic_function_wrapper_poly.cpp  generic_object_wrapper.cpp  generic_timeout_function.cpp  safe_read_write.cpp
takeaway_headers/: safe_read_write.hpp
